[metadata]
name = venus
summary = OpenStack DR Recovery
description-file =
    README.rst
author = ECONE
author-email = cloud@hihuron.com
home-page = http://www.hihuron.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    venus

[entry_points]
oslo.config.opts =
    venus = venus.opts:list_opts
    keystonemiddleware = keystonemiddleware.auth_token:list_opts
    oslo_concurrency = oslo_concurrency.opts:list_opts
    oslo.messaging = oslo_messaging.opts:list_opts
    oslo.db.concurrency = oslo.db.concurrency:list_opts
console_scripts =
    venus-all = venus.cmd.all:main
    venus-api = venus.cmd.api:main
    venus-manage = venus.cmd.manage:main
    venus-rootwrap = oslo_rootwrap.cmd:main
# These are for backwards compat with Havana notification_driver configuration values
oslo_messaging.notify.drivers =
    venus.openstack.common.notifier.log_notifier = oslo_messaging.notify._impl_log:LogDriver
    venus.openstack.common.notifier.no_op_notifier = oslo_messaging.notify._impl_noop:NoOpDriver
    venus.openstack.common.notifier.rpc_notifier2 = oslo_messaging.notify._impl_messaging:MessagingV2Driver
    venus.openstack.common.notifier.rpc_notifier = oslo_messaging.notify._impl_messaging:MessagingDriver
    venus.openstack.common.notifier.test_notifier = oslo_messaging.notify._impl_test:TestDriver
# These are for backwards compatibility with Juno middleware configurations
oslo_middleware =
    venus.api.middleware.sizelimit = oslo_middleware.sizelimit
    venus.openstack.common.middleware.request_id = oslo_middleware.request_id

venus.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = venus/locale
domain = venus

[update_catalog]
domain = venus
output_dir = venus/locale
input_file = venus/locale/venus.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = venus/locale/venus.pot
